--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "restaurant-apps",
+  "name": "jelajah-rasa",
   "version": "1.0.0",
-  "description": "",
+  "description": "sebuah aplikasi katalog restoran yang merupakan salah satu project submission dari Dicoding",
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
@@ -12,7 +12,7 @@
     "lint": "eslint ./src"
   },
   "keywords": [],
-  "author": "your_name <your.email@domain.com>",
+  "author": "Ifdal lisyukri <lisyukri.ifdal@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.22.9",
