--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     },
     "rules": {
         "no-console":"off",
-        "eol-last":"off"
+        "eol-last":"off",
+        "no-alert" :"off"
     }
 }
