--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,11 @@
     },
     "rules": {
         "no-console":"off",
-        "eol-last":"off"
+        "eol-last":"off",
+        "no-multiple-empty-lines" :"off",
+        "max-len":"off",
+        "no-alert" :"off",
+        "comma-dangle":"off",
+        "object-shorthand":"off"
     }
 }
