--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "max-len":"off",
         "no-alert" :"off",
         "comma-dangle":"off",
-        "object-shorthand":"off"
+        "object-shorthand":"off",
+        "no-restricted-globals" :"off"
     }
 }
