--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,21 +4,32 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "airbnb-base"
-    ],
+    "extends": "airbnb-base",
+    "overrides": [],
     "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
     "rules": {
-        "no-console":"off",
-        "eol-last":"off",
-        "no-multiple-empty-lines" :"off",
-        "max-len":"off",
-        "no-alert" :"off",
-        "comma-dangle":"off",
-        "object-shorthand":"off",
-        "no-restricted-globals" :"off"
+        "import/no-extraneous-dependencies": 0,
+        "no-console": 0,
+        "no-underscore-dangle": 0,
+        "linebreak-style": 0,
+        "implicit-arrow-linebreak": 0,
+        "no-restricted-syntax": 0,
+        "comma-dangle": 0,
+        "quotes": 0,
+        "prefer-regex-literals": 0,
+        "indent": 0,
+        "operator-linebreak": 0,
+        "no-unused-vars": 0,
+        "func-names": 0,
+        "import/prefer-default-export": 0,
+        "eol-last": 0,
+        "max-len": 0,
+        "no-alert": 0,
+        "no-restricted-globals": 0,
+        "eslint-plugin-import/no-named-as-default": 0,
+        "eslint-plugin-import/no-named-as-default-member": 0
     }
 }
