--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.common.js",
     "serve": "http-server dist",
     "test": "jest",
     "test:watch": "jest --watchAll",
@@ -34,6 +34,8 @@
     "globals": "^15.1.0",
     "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "playwright": "^1.44.0",
