--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack --config webpack.common.js",
+    "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "build-image": "node sharp.js"
   },
   "keywords": [],
   "author": "Ifdal lisyukri <lisyukri.ifdal@gmail.com>",
@@ -39,6 +40,7 @@
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "playwright": "^1.44.0",
+    "sharp": "^0.33.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
