--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "lint": "eslint ./src",
-    "build-image": "node sharp.js"
+    "build-image": "node sharp.js",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "Ifdal lisyukri <lisyukri.ifdal@gmail.com>",
